Module03: Building simple components

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,2 +1,252 @@
+/* line 1, scss/styles.scss */
+:root {
+  --textColor: #031129;
+  --backgroundColor: #41b89a;
+  --menuTextColor: #9ebed0;
+  --menuTextHoverColor: #eaf0f3;
+  --menuBackgroundColor: #031129;
+  /* Primary */
+  --magenta-050: #f5e1f7;
+  --magenta-100: #ecbdf2;
+  --magenta-200: #ce80d9;
+  --magenta-300: #bb61c7;
+  --magenta-400: #ad4bb8;
+  --magenta-500: #a23dad;
+  --magenta-600: #90279c;
+  --magenta-700: #7c1a87;
+  --magenta-800: #671270;
+  --magenta-900: #4e0754;
+  /* Neutrals */
+  --blue-grey-050: #f0f4f8;
+  --blue-grey-100: #d9e2ec;
+  --blue-grey-200: #bcccdc;
+  --blue-grey-300: #9fb3c8;
+  --blue-grey-400: #829ab1;
+  --blue-grey-500: #627d98;
+  --blue-grey-600: #486581;
+  --blue-grey-700: #334e68;
+  --blue-grey-800: #243b53;
+  --blue-grey-900: #102a43;
+}
+
+/* line 32, scss/styles.scss */
+html {
+  font-size: 125%;
+  font-family: "Roboto", sans-serif;
+  line-height: 1.4;
+}
+
+/* line 38, scss/styles.scss */
+body {
+  background-color: var(--blue-grey-100);
+  color: var(--blue-grey-900);
+}
+
+/* line 45, scss/styles.scss */
+h1 {
+  margin-top: 3rem;
+  margin-bottom: 1rem;
+  font-weight: 400;
+  line-height: 1.25;
+}
+
+/* line 52, scss/styles.scss */
+h2 {
+  font-weight: 400;
+}
+
+/*
+ * BEGIN EDITING FROM THIS POINT ONWARDS
+ * =====================================
+ */
+/**
+ * Off-Canvas Menu
+ */
+/* line 64, scss/styles.scss */
+.offcanvas-is-open .offcanvas-menu,
+.offcanvas-is-open .container {
+  transform: translateX(14rem);
+}
+
+/* line 68, scss/styles.scss */
+.offcanvas-menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: -14rem;
+  width: 14rem;
+  background-color: var(--menuBackgroundColor);
+}
+
+/**
+ * Containers
+ */
+/* line 80, scss/styles.scss */
+.container {
+  padding-top: 3rem;
+  padding-left: 2.5rem;
+  max-width: 33rem;
+}
+
+/**
+ * Menu button
+ */
+/* line 89, scss/styles.scss */
+button {
+  border: 2px solid currentColor;
+}
+
+/* line 93, scss/styles.scss */
+button:hover,
+button:focus,
+.offcanvas-is-open button {
+  background-color: var(--textColor);
+  color: var(--backgroundColor);
+  border-color: var(--textColor);
+}
+
+/* line 101, scss/styles.scss */
+main {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+
+/* line 108, scss/styles.scss */
+.wrap {
+  position: relative;
+  max-width: 30em;
+}
+
+/**
+ * START EDITING HERE
+ * ==================
+ */
+/* line 117, scss/styles.scss */
+.point-hand {
+  position: absolute;
+  left: 0;
+  right: 0;
+  max-width: 3em;
+  margin-top: 1em;
+  margin-right: auto;
+  margin-left: auto;
+  color: var(--magenta-300);
+}
+
+/**
+ * Modal
+ */
+/* line 131, scss/styles.scss */
+.modal-overlay {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 1em;
+  background-color: rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0;
+  z-index: -1;
+}
+
+/* line 145, scss/styles.scss */
+.modal-is-open .modal-overlay {
+  opacity: 1;
+  z-index: 1;
+}
+
+/* line 150, scss/styles.scss */
+.modal {
+  display: grid;
+  place-items: center;
+  position: relative;
+  border-radius: 4px;
+  background-color: var(--magenta-300);
+  box-shadow: 0 2px 4px 2px rgba(0, 0, 0, 0.15);
+  color: #fff;
+  min-width: 50vmin;
+  min-height: 50vmin;
+}
+
+/* line 162, scss/styles.scss */
+.modal__close-button {
+  position: absolute;
+  top: -1.5em;
+  right: -1.5em;
+  padding: 1em 1em;
+  font-size: 0.6em;
+  border-radius: 50%;
+  border: 2px solid var(--blue-grey-400);
+  background: var(--blue-grey-400);
+  color: white;
+  opacity: 0;
+}
+
+/* line 175, scss/styles.scss */
+.modal:hover .modal__close-button {
+  opacity: 1;
+}
+
+/* line 179, scss/styles.scss */
+.modal__close-button:hover,
+.modal__close-button:active,
+.modal__close-button:focus {
+  opacity: 1;
+  background: var(--magenta-300);
+  border-color: var(--magenta-600);
+}
+
+/**
+ * Modal button
+ */
+/* line 190, scss/styles.scss */
+.button {
+  padding: 0.75em 0.75em;
+  border: none;
+  border-radius: 4px;
+  background-color: var(--magenta-300);
+  color: #fff;
+}
+
+/* line 198, scss/styles.scss */
+.button:hover,
+.button:active {
+  background-color: var(--magenta-600);
+}
+
+/**
+ *  Navigation
+ * -----------
+ */
+/* line 207, scss/styles.scss */
+.nav {
+  margin-top: 6rem;
+}
+
+/* line 211, scss/styles.scss */
+.nav a {
+  display: block;
+  margin: 0;
+  padding: 0.5rem 3rem;
+  color: var(--menuTextColor);
+  text-decoration: none;
+}
+
+/* line 219, scss/styles.scss */
+.nav a:hover {
+  background-color: #010b13;
+}
+
+/* line 223, scss/styles.scss */
+.nav a:hover,
+.nav a:focus,
+.nav a:active {
+  color: var(--menuTextHoverColor);
+}
 
 /*# sourceMappingURL=styles.css.map */
