--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,6 +1,6 @@
 :root {
-  --textColor: #031129;
-  --backgroundColor: #41b89a;
+  //   --textColor: #031129;
+  //   --backgroundColor: #41b89a;
   --menuTextColor: #9ebed0;
   --menuTextHoverColor: #eaf0f3;
   --menuBackgroundColor: #031129;
@@ -27,6 +27,9 @@
   --blue-grey-700: #334e68;
   --blue-grey-800: #243b53;
   --blue-grey-900: #102a43;
+
+  --link-color: #2900b4;
+  --link-color-dark: #190070;
 }
 
 html {
@@ -38,6 +41,9 @@ html {
 body {
   //   background-color: var(--backgroundColor);
   //   color: var(--textColor);
+  background-image: linear-gradient(135deg, #ffc96a, #ffbfdd);
+  min-height: 100vh;
+  padding: 3em;
   background-color: var(--blue-grey-100);
   color: var(--blue-grey-900);
 }
@@ -53,10 +59,138 @@ h2 {
   font-weight: 400;
 }
 
+a {
+  color: var(--link-color);
+}
+
+a:hover,
+a:active {
+  color: var(--link-color-dark);
+}
+
 /*
  * BEGIN EDITING FROM THIS POINT ONWARDS
  * =====================================
  */
+
+/**
+ * Accordion
+ */
+[data-theme="cheese"] {
+  --background-color: #f3ca5f;
+  --text-color: #3a1e0e;
+}
+
+[data-theme="lettuce"] {
+  --background-color: #88d28b;
+  --text-color: #091e0a;
+}
+
+[data-theme="tomato"] {
+  --background-color: #f46e6e;
+  --text-color: #1a0201;
+}
+
+[data-theme="beef"] {
+  --background-color: #ac5a30;
+  --text-color: #170005;
+}
+
+.accordion-container {
+  max-width: 30em;
+}
+
+.accordion {
+  position: relative;
+  background-color: var(--background-color);
+  color: var(--text-color);
+}
+
+.accordion::before {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 1em;
+  background-color: rgba(125, 89, 69, 0.6);
+  content: "";
+}
+
+.accordion:first-child {
+  border-top-left-radius: 1.5em;
+  border-top-right-radius: 1.5em;
+}
+
+.accordion:first-child::before {
+  border-top-left-radius: 1.5em;
+}
+
+.accordion:last-child {
+  border-bottom-left-radius: 1.5em;
+  border-bottom-right-radius: 1.5em;
+}
+
+.accordion:last-child::before {
+  border-bottom-left-radius: 1.5em;
+}
+
+.accordion__header button {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: calc(100% - 1rem);
+  margin-left: 1rem;
+  padding: 1.5rem 2rem 1.5rem;
+  border: 0;
+  text-align: left;
+}
+
+.accordion__title {
+  font-size: 1.5rem;
+  text-transform: uppercase;
+  font-weight: bold;
+}
+
+/* Indicators */
+.accordion__indicator > * {
+  width: 1rem;
+}
+
+.accordion .indicator__plus {
+  display: block;
+}
+
+.accordion .indicator__minus {
+  display: none;
+}
+
+.accordion.is-open .indicator__minus {
+  display: block;
+}
+
+.accordion.is-open .indicator__plus {
+  display: none;
+}
+
+/* Accordion content */
+.accordion.is-open .accordion__content {
+  display: grid;
+}
+
+.accordion__content {
+  display: none;
+  grid-template-columns: 7.5em 1fr;
+  grid-column-gap: 1.5em;
+  align-items: center;
+  padding-right: 3em;
+  padding-bottom: 1.5em;
+  padding-left: 3em;
+}
+
+.accordion__content svg {
+  width: 10em;
+  max-width: 100%;
+}
 
 /**
  * Off-Canvas Menu
